<resources>
    <string name="app_name">CovidFight</string>

    <string name="title_activity_maps">Map</string>
    <string name="title_activity_stats">Stats</string>
    <string name="title_activity_business">Businesses</string>
    <string name="title_activity_info">Info</string>
    <string name="title_activity_report">Report</string>
    <string name="title_activity_about">About</string>
    <string name="title_activity_settings">Settings</string>

    <string name="app_logo">App Logo</string>

    <string name="report_instructions">To ensure the safety of our community, please fill out the form below if you observe a COVID violation at any facility.</string>
    <string name="report_name">Name</string>
    <string name="report_address">Location</string>
    <string name="report_email">Email (Optional)</string>
    <string name="report_description">Description of Violation</string>
    <string name="report_button">Submit</string>

    <string name="report_post_message">Please wait! We\'re sending your message.</string>
    <string name="report_posted">Thank you! Your message has been successfully delivered.</string>
    <string name="business_name">Business 1</string>
    <string name="description">Description</string>

    <string name="set_reminder">Set Daily Mask Reminder</string>
    <string name="cancel_reminder">Cancel Reminder</string>
    <string name="no_reminder">No Reminder Set</string>
    <string name="reminder_canceled">Reminder Canceled</string>
    <string name="reminder_settings">Reminder Settings</string>

    <string name="title_activity_gmu">GMU</string>
    <string name="title_activity_jmu">JMU</string>
    <string name="title_activity_ur">UR</string>
    <string name="title_activity_uva">UVA</string>
    <string name="title_activity_vcu">VCU</string>
    <string name="title_activity_vt">VT</string>
    <string name="title_activity_wm">WM</string>
    <string name="title_activity_idk">IDK</string>


    <!-- Preference Titles -->
    <string name="notifications_header">Notifications</string>
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>


    <!-- Notifications Preferences -->
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>

    <!-- Messages Preferences -->

    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>
    <string name="title_activity_maps2">Map</string>
</resources>