<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg_gradient"
    android:orientation="vertical"
    android:weightSum="10"
    tools:context=".MainActivity">

    <RelativeLayout
        android:layout_weight="1.5"
        android:layout_width="match_parent"
        android:layout_height="0dp">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/baloo"
            android:text="@string/title_activity_report"
            android:paddingTop="10dp"
            android:paddingBottom="10dp"
            android:textColor="@color/black"
            android:textSize="50sp" />

    </RelativeLayout>


    <GridLayout
        android:layout_weight="8.5"
        android:columnCount="2"
        android:rowCount="4"
        android:alignmentMode="alignMargins"
        android:padding="8dp"
        android:columnOrderPreserved="false"
        android:layout_width="match_parent"
        android:layout_height="0dp">

        <!--Row 1 -->
        <!--Column 1 -->

        <androidx.cardview.widget.CardView
            android:id="@+id/GMUCard"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_columnWeight="1"
            android:layout_rowWeight="1"
            android:layout_marginBottom="16dp"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            app:cardElevation="8dp"
            app:cardCornerRadius="8dp"
            >
            <LinearLayout
                android:layout_gravity="center_horizontal|center_vertical"
                android:orientation="vertical"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <ImageView
                    android:src="@drawable/map_icon"
                    android:layout_gravity="center_horizontal"
                    android:layout_width="80dp"
                    android:layout_height="80dp"
                    android:contentDescription="@string/title_activity_maps" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingLeft="10dp"
                    android:fontFamily="@font/baloo"
                    android:text="@string/title_activity_gmu"
                    android:textColor="#000000"
                    android:textSize="30sp" />

            </LinearLayout>

        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:id="@+id/JMUCard"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_columnWeight="1"
            android:layout_rowWeight="1"
            android:layout_marginBottom="16dp"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            app:cardElevation="8dp"
            app:cardCornerRadius="8dp"
            >
            <LinearLayout
                android:layout_gravity="center_horizontal|center_vertical"
                android:orientation="vertical"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <ImageView
                    android:src="@drawable/stats_icon"
                    android:layout_gravity="center_horizontal"
                    android:layout_width="80dp"
                    android:layout_height="80dp"
                    android:contentDescription="@string/title_activity_stats" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/baloo"
                    android:text="@string/title_activity_jmu"
                    android:textColor="#000000"
                    android:textSize="30sp" />

            </LinearLayout>

        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:id="@+id/URCard"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_columnWeight="1"
            android:layout_rowWeight="1"
            android:layout_marginBottom="16dp"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            app:cardElevation="8dp"
            app:cardCornerRadius="8dp"
            >
            <LinearLayout
                android:layout_gravity="center_horizontal|center_vertical"
                android:orientation="vertical"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <ImageView
                    android:src="@drawable/business_icon"
                    android:layout_gravity="center_horizontal"
                    android:layout_width="80dp"
                    android:layout_height="80dp"
                    android:contentDescription="@string/title_activity_business" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/baloo"
                    android:text="@string/title_activity_ur"
                    android:textColor="#000000"
                    android:textSize="30sp" />

            </LinearLayout>

        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:id="@+id/UVACard"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_columnWeight="1"
            android:layout_rowWeight="1"
            android:layout_marginBottom="16dp"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            app:cardElevation="8dp"
            app:cardCornerRadius="8dp"
            >
            <LinearLayout
                android:layout_gravity="center_horizontal|center_vertical"
                android:orientation="vertical"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <ImageView
                    android:src="@drawable/report_icon"
                    android:layout_gravity="center_horizontal"
                    android:layout_width="80dp"
                    android:layout_height="80dp"
                    android:contentDescription="@string/title_activity_uva" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/baloo"
                    android:text="@string/title_activity_uva"
                    android:textColor="#000000"
                    android:textSize="30sp" />

            </LinearLayout>

        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:id="@+id/VCUCard"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_columnWeight="1"
            android:layout_rowWeight="1"
            android:layout_marginBottom="16dp"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            app:cardElevation="8dp"
            app:cardCornerRadius="8dp"
            >
            <LinearLayout
                android:layout_gravity="center_horizontal|center_vertical"
                android:orientation="vertical"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <ImageView
                    android:src="@drawable/about_icon"
                    android:layout_gravity="center_horizontal"
                    android:layout_width="80dp"
                    android:layout_height="80dp"
                    android:contentDescription="@string/title_activity_about" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingLeft="10dp"
                    android:fontFamily="@font/baloo"
                    android:text="@string/title_activity_vcu"
                    android:textColor="#000000"
                    android:textSize="30sp" />

            </LinearLayout>

        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:id="@+id/VTCard"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_columnWeight="1"
            android:layout_rowWeight="1"
            android:layout_marginBottom="16dp"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            app:cardElevation="8dp"
            app:cardCornerRadius="8dp"
            >
            <LinearLayout
                android:layout_gravity="center_horizontal|center_vertical"
                android:orientation="vertical"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <ImageView
                    android:src="@drawable/settings_icon"
                    android:layout_gravity="center_horizontal"
                    android:layout_width="80dp"
                    android:layout_height="80dp"
                    android:contentDescription="@string/title_activity_vt" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/baloo"
                    android:text="@string/title_activity_vt"
                    android:textColor="#000000"
                    android:textSize="30sp" />

            </LinearLayout>

        </androidx.cardview.widget.CardView>
        <androidx.cardview.widget.CardView
            android:id="@+id/WMCard"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_columnWeight="1"
            android:layout_rowWeight="1"
            android:layout_marginBottom="16dp"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            app:cardElevation="8dp"
            app:cardCornerRadius="8dp"
            >
            <LinearLayout
                android:layout_gravity="center_horizontal|center_vertical"
                android:orientation="vertical"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <ImageView
                    android:src="@drawable/map_icon"
                    android:layout_gravity="center_horizontal"
                    android:layout_width="80dp"
                    android:layout_height="80dp"
                    android:contentDescription="@string/title_activity_maps" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingLeft="10dp"
                    android:fontFamily="@font/baloo"
                    android:text="@string/title_activity_wm"
                    android:textColor="#000000"
                    android:textSize="30sp" />

            </LinearLayout>

        </androidx.cardview.widget.CardView>
        <androidx.cardview.widget.CardView
            android:id="@+id/RandomCard"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_columnWeight="1"
            android:layout_rowWeight="1"
            android:layout_marginBottom="16dp"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            app:cardElevation="8dp"
            app:cardCornerRadius="8dp"
            >
            <LinearLayout
                android:layout_gravity="center_horizontal|center_vertical"
                android:orientation="vertical"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <ImageView
                    android:src="@drawable/map_icon"
                    android:layout_gravity="center_horizontal"
                    android:layout_width="80dp"
                    android:layout_height="80dp"
                    android:contentDescription="@string/title_activity_maps" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingLeft="10dp"
                    android:fontFamily="@font/baloo"
                    android:text="@string/title_activity_idk"
                    android:textColor="#000000"
                    android:textSize="30sp" />

            </LinearLayout>

        </androidx.cardview.widget.CardView>

    </GridLayout>

</LinearLayout>



