<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg_gradient"
    android:screenOrientation="portrait"
    tools:context=".SettingsActivity">

    <!-- <TextView
        android:id="@+id/settingsTitle"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_centerHorizontal="true"
        android:textAlignment="center"
        android:layout_alignParentTop="true"
        android:textColor="@color/white"
        android:background="@color/purple"
        android:paddingTop="8dp"
        android:elevation="10dp"
        android:text="@string/reminder_settings"
        android:textSize="25sp"
        android:gravity="center_horizontal" />  -->

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/timepicker_button"
        android:layout_centerHorizontal="true"
        android:elevation="10dp"
        android:gravity="center"
        android:textAlignment="center"
        android:layout_marginBottom="40dp"
        android:textColor="@color/white"
        android:textStyle="bold"
        android:text="@string/no_reminder"
        android:screenOrientation="portrait"
        android:textSize="40sp" />

    <Button
        android:id="@+id/timepicker_button"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:elevation="10dp"
        android:background="@color/purple"
        android:textColor="@color/white"
        android:textSize="16sp"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:text="@string/set_reminder" />

    <Button
        android:id="@+id/cancel_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/purple"
        android:layout_below="@+id/timepicker_button"
        android:layout_centerHorizontal="true"
        android:textSize="16sp"
        android:layout_marginTop="15dp"
        android:text="@string/cancel_reminder" />

</RelativeLayout>