<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg_gradient"

    android:screenOrientation="portrait"
    tools:context=".ReportActivity">



    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/baloo"
        android:text="@string/title_activity_report"
        android:paddingTop="10dp"
        android:paddingBottom="10dp"
        android:textColor="@color/black"
        android:textSize="50sp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/report_instructions"
        android:paddingBottom="20dp"
        android:textColor="@color/grey"
        android:textStyle="bold"
        android:textSize="15sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/baloo"
            android:paddingTop="10dp"
            android:paddingBottom="10dp"
            android:text="@string/title_activity_report"
            android:textColor="@color/black"
            android:textSize="50sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingBottom="20dp"
            android:text="@string/report_instructions"
            android:textColor="@color/grey"
            android:textSize="15sp"
            android:textStyle="bold" />


        <!--<TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:padding="3dp"
                android:text="@string/report_email"
                android:textAllCaps="true"
                android:textColor="@color/colorPrimary"
                android:background="@android:color/white"
                android:textSize="12sp"/>

            <EditText
                android:id="@+id/enter_email"
                android:layout_width="fill_parent"
                android:layout_height="38dp"
                android:layout_marginBottom="20dp"
                android:inputType="textEmailAddress"
                android:background="@android:color/white"
                android:singleLine="true"
                android:textSize="14sp" /> -->

        <!--<TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:padding="3dp"
        android:text="@string/report_address"
        android:textAllCaps="true"
        android:textColor="@color/colorPrimary"
        android:background="@android:color/white"
        android:textSize="12sp"/> -->

        <EditText
            android:id="@+id/enter_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:background="@android:color/white"
            android:hint="@string/report_email"
            android:inputType="textEmailAddress"
            android:padding="12dp"
            android:singleLine="true" />

        <EditText
            android:id="@+id/enter_address"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:background="@android:color/white"
            android:hint="@string/report_address"
            android:inputType="textPostalAddress"
            android:padding="12dp"
            android:singleLine="true" />

        <!--<TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:padding="3dp"
        android:text="@string/report_description"
        android:textAllCaps="true"
        android:textColor="@color/colorPrimary"
        android:background="@android:color/white"
        android:textSize="12sp"/> -->

        <EditText
            android:id="@+id/enter_description"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginBottom="20dp"
            android:layout_weight="1"
            android:background="@android:color/white"
            android:gravity="top"
            android:hint="@string/report_description"
            android:inputType="textMultiLine"
            android:padding="12dp" />

        <Button
            android:id="@+id/submitButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="25dp"
            android:layout_marginBottom="60dp"
            android:background="@color/purple"
            android:paddingLeft="15dp"
            android:paddingTop="1dp"
            android:paddingRight="15dp"
            android:paddingBottom="1dp"
            android:text="@string/report_button"
            android:textAllCaps="true"
            android:textColor="@android:color/white"
            android:textSize="20sp" />

    </LinearLayout>


    <!--<TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:padding="3dp"
                android:text="@string/report_email"
                android:textAllCaps="true"
                android:textColor="@color/colorPrimary"
                android:background="@android:color/white"
                android:textSize="12sp"/>

            <EditText
                android:id="@+id/enter_email"
                android:layout_width="fill_parent"
                android:layout_height="38dp"
                android:layout_marginBottom="20dp"
                android:inputType="textEmailAddress"
                android:background="@android:color/white"
                android:singleLine="true"
                android:textSize="14sp" /> -->

    <!--<TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:padding="3dp"
        android:text="@string/report_address"
        android:textAllCaps="true"
        android:textColor="@color/colorPrimary"
        android:background="@android:color/white"
        android:textSize="12sp"/> -->

    <!--<TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:padding="3dp"
        android:text="@string/report_description"
        android:textAllCaps="true"
        android:textColor="@color/colorPrimary"
        android:background="@android:color/white"
        android:textSize="12sp"/> -->

</androidx.constraintlayout.widget.ConstraintLayout>